# DPSolver2D

./: CMakeLists.txt  README.md  main.c  speedResult.txt
MatlabFiles/: DynamicsCheck.asv  DynamicsCheck.m  IDAEplot.m  ModelSpeedSolver.slx  ModelSpeedSolver.slx.autosave  ModelSpeedSolver.slx.original  ModelSpeedSolver.slx.r2017b  ModelSpeedSolver.slxc  cascadingSolver.c  cascadingSolver.mexw64  cascadingSolver.tlc  createSfunc.m  inputSolver.asv  inputSolver.m  magicSolver.c  magicSolver.mexw64  magicSolver.tlc  modeltest.slx.original  plotResult.m  showResult.m  speedSolver.c  speedSolver.mexw64  speedSolver.tlc  test.asv  test.m  txtVerification.asv  txtVerification.m
inc/: AdaptiveGrid.h  BoundaryLine.h  MathFunction.h  PrintResult.h  SolverAlgorithm.h  SolverStruct.h  SpeedSolver.h  SystemDynamic.h  ThermalSolver.h
src/: AdaptiveGrid.c  BasicAlgorithm.c  BoundaryLine.c  MathFunction.c  PrintResult.c  SolverAlgorithm.c  SpeedSolver.c  SystemDynamic.c  ThermalSolver.c
txtResult/: forceResult.txt  forceResult_0.txt  forceResult_1.txt  forceResult_10.txt  forceResult_11.txt  forceResult_12.txt  forceResult_13.txt  forceResult_14.txt  forceResult_15.txt  forceResult_16.txt  forceResult_17.txt  forceResult_18.txt  forceResult_19.txt  forceResult_2.txt  forceResult_27.txt  forceResult_3.txt  forceResult_4.txt  forceResult_5.txt  forceResult_6.txt  forceResult_7.txt  forceResult_8.txt  forceResult_9.txt  inletResult.txt  inletResult_0.txt  inletResult_1.txt  inletResult_10.txt  inletResult_11.txt  inletResult_12.txt  inletResult_13.txt  inletResult_14.txt  (+58 more)
(+66 files in other folders)
